--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/charts": "^2.2.7",
-    "@ant-design/icons": "^6.0.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@ant-design/charts": "^1.4.2",
+    "@ant-design/icons": "^5.3.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.24.5",
-    "axios": "^1.8.4",
+    "antd": "^5.14.1",
+    "axios": "^1.6.7",
     "moment": "^2.30.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-resizable": "^3.0.5",
+    "react-resizable-columns": "^1.0.4",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.js' --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@testing-library/dom": "^10.4.0",
+    "@types/react": "^19.0.12",
+    "classnames": "^2.5.1",
+    "eslint-plugin-react": "^7.37.4",
+    "lodash": "^4.17.21",
+    "reflect-metadata": "^0.2.2",
+    "typescript": "^5.8.2"
   }
 }
